# airut

./: .gitignore  .mdformat.toml  CLAUDE.md  LICENSE  PYPI_README.md  README.md  SECURITY.md  pr545-retest.txt  pr545-test.txt  pyproject.toml  test-creds.txt  test-file.txt  test-token-access.md
.airut/: README.md  airut.yaml  network-allowlist.yaml  sandbox.yaml
.airut/container/: Dockerfile
.claude/: settings.json
.github/workflows/: authorship.yml  ci.yml  code.yml  e2e.yml  integration.yml  publish.yml  screenshots.yml  security.yml
airut/: __init__.py  _json_types.py  _threads.py  _version.pyi  allowlist.py  cli.py  dotenv.py  git_mirror.py  html_to_text.py  http.py  install_services.py  logging.py  markdown.py  sandbox_cli.py  version.py  xdg.py  yaml_env.py
airut/_bundled/: __init__.py
airut/_bundled/proxy/: aws_signing.py  dns_responder.py  github_app.py  graphql_operations.py  graphql_scope.py  host_match.py  node_id.py  proxy-entrypoint.sh  proxy.dockerfile  proxy_filter.py  pyproject.toml  request_filter.py  requirements.txt  tool_domains.py
airut/claude_output/: __init__.py  extract.py  parser.py  types.py
airut/config/: __init__.py  diff.py  editor.py  editor_form.py  editor_schema.py  generate.py  migration.py  schema.py  snapshot.py  source.py  vars.py  watcher.py
airut/conversation/: __init__.py  conversation_layout.py  conversation_store.py
airut/dashboard/: __init__.py  config_editor.py  config_handlers.py  formatters.py  handlers.py  handlers_config.py  server.py  sse.py  templating.py  tracker.py
airut/gateway/: __init__.py  action_summary.py  channel.py  config.py  conversation.py  dedup.py  dotenv_loader.py  listener.py  responder.py
airut/gh/: __init__.py  ci.py  pr.py  review.py
airut/sandbox/: __init__.py  _entrypoint.py  _image.py  _image_cache.py  _network.py  _output.py  _proxy.py  _run_container.py  claude_binary.py  event_log.py  network_log.py  sandbox.py  secrets.py  task.py  types.py
config/: airut.example.yaml  slack-app-manifest.json
doc/: README.md  agentic-operation.md  architecture.md  ci-sandbox.md  deployment.md  email-setup.md  execution-sandbox.md  gerrit-onboarding.md  github-app-setup.md  m365-oauth2.md  network-sandbox.md  periodic-tasks.md  repo-onboarding.md  security.md  slack-setup.md  testing.md
docker/: airut-entrypoint.sh  aws_signing.py  dns_responder.py  proxy-allowlist.py  proxy-entrypoint.sh  proxy-filter.py  proxy.dockerfile  proxy_filter.py
lib/: airut.py  error_explainer.py  git_version.py  html_to_text.py  install_services.py  logging.py  markdown.py  update_lock.py  version.py
lib/_bundled/: __init__.py
lib/claude_output/: __init__.py  extract.py  parser.py  types.py
lib/container/: __init__.py  conversation_layout.py  dns.py  executor.py  network.py  proxy.py  session.py  session_layout.py
lib/conversation/: __init__.py  conversation_store.py
lib/dashboard/: __init__.py  formatters.py  handlers.py  server.py  sse.py  tracker.py  versioned.py  views.py
lib/gateway/: __init__.py  config.py  conversation.py  dotenv_loader.py  listener.py  parsing.py  responder.py  security.py
lib/gh/: __init__.py  ci.py  review.py
lib/sandbox/: __init__.py  _entrypoint.py  _image.py  _network.py  _output.py  _proxy.py  event_log.py  network_log.py  sandbox.py  secrets.py  session.py  task.py  types.py
proxy/: proxy.dockerfile  proxy_filter.py
screenshots/: README.md  generate.py  mock_data.py  pyproject.toml
scripts/: airut.py  check_actions.py  check_licenses.py  check_markdown.py  check_vendor_security.py  check_xrefs.py  ci.py  ci_trigger.py  hatch_build.py  install_services.py  pr.py  rename_lib_to_airut.py  sandbox-ci.sh  update_vendor.py
scripts/gateway/: main.py
spec/: README.md  airut-ci.md  airut-sandbox.md  anthropic-tool-domain-trim.md  async-sandbox-io.md  authentication.md  auto-updater.md  aws-sigv4-resigning.md  cli.md  config-editor.md  config-reload.md  config-unification.md  config-variables.md  dashboard-htmx-migration.md  dashboard.md  declarative-config.md  gateway-architecture.md  github-app-credential.md  graphql-operation-allowlist.md  graphql-repo-scoping.md  image-cache.md  image.md  integration-tests.md  live-dashboard.md  local-ci-runner.md  markdown-mistune.md  markdown.md  masked-secrets.md  multi-channel.md  multi-repo.md  network-sandbox.md  periodic-tasks.md  pr-workflow-tool.md  protocol-agnostic-gateway.md  repo-config.md  request-body-filters.md  sandbox-action.md  sandbox-cli.md  sandbox.md  sandboxed-ci-migration.md  (+2 more)
tests/: __init__.py  conftest.py  test_airut.py  test_allowlist.py  test_check_licenses.py  test_ci.py  test_cli.py  test_config_diff.py  test_config_editor.py  test_config_generate.py  test_config_migration.py  test_config_schema.py  test_config_schema_api.py  test_config_snapshot.py  test_config_source.py  test_config_vars.py  test_config_watcher.py  test_conftest.py  test_dns.py  test_dotenv.py  test_error_explainer.py  test_git_mirror.py  test_hatch_build.py  test_html_to_text.py  test_http.py  test_install_services.py  test_markdown.py  test_pentest_exfil.py  test_runtime_deps.py  test_threads.py  test_update_lock.py  test_xdg.py  test_yaml_env.py
tests/canary/: test_sandbox_canary.py
tests/claude_output/: test_extract.py  test_parser.py  test_pipeline.py  test_types.py
tests/container/: conftest.py  test_conversation_layout.py  test_dns.py  test_executor.py  test_network.py  test_proxy.py  test_session.py  test_session_layout.py
tests/conversation/: __init__.py  conftest.py  test_conversation_layout.py  test_conversation_store.py
tests/dashboard/: __init__.py  conftest.py  test_actions.py  test_config_editor.py  test_config_handlers.py  test_config_merge.py  test_config_parsing.py  test_formatters.py  test_handlers.py  test_handlers_config.py  test_network.py  test_server.py  test_sse.py  test_tracker.py  test_versioned.py  test_views.py
tests/docker/: conftest.py  test_aws_signing.py  test_dns_responder.py  vectors.py  (+2 more)
workflows/: check-actions.md  code-review.md  release.md  sandbox-action.md  sandbox-pentest.md
(+267 files in other folders)
