[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airut"
dynamic = ["version"]
description = "Sandboxed Claude Code over email and Slack"
license = "MIT"
readme = "PYPI_README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "msal>=1.31",
    "packaging>=21.0",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "slack-bolt>=1.20",
    "werkzeug>=3.1.5",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "cryptography>=46.0.4",
    "mdformat>=0.7",
    "mdformat-frontmatter>=2",
    "mdformat-gfm>=0.3",
    "mdformat-ruff>=0.1",
    "pip-licenses>=5.0",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-socket>=0.7.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14",
    "ty>=0.0.8",
    "uv-secure>=0.6",
]

[project.scripts]
airut = "airut.cli:cli"

[project.urls]
Homepage = "https://github.com/airutorg/airut"
Repository = "https://github.com/airutorg/airut"
Documentation = "https://github.com/airutorg/airut/tree/main/doc"

[tool.hatch.metadata.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["airut"]

[tool.ruff]
line-length = 80
target-version = "py313"
src = ["airut", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "D1",     # Allow missing docstrings (enforce via review)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["airut"]
force-single-line = false
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["airut", "scripts", "tests"]
exclude = ["airut/_bundled/proxy"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--disable-socket --ignore=tests/integration"

[tool.pip-licenses]
# Allowed licenses for runtime dependencies (using partial matching).
# Checked via scripts/check_licenses.py which scans only runtime deps.
# See: https://spdx.org/licenses/ for license identifiers
allow-only = """
Apache;
BSD;
MIT;
MPL;
Mozilla Public License
"""
partial-match = true
