[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airut"
dynamic = ["version"]
description = "Sandboxed Claude Code over email and Slack"
license = "MIT"
readme = "PYPI_README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "inotify-simple>=2.0",
    "jinja2>=3.1",
    # Held at <3.3: mistune 3.3.x rewrote the GFM table parser and dropped
    # delimiter-row validation, so plain pipe-separated prose (e.g. "A | B |
    # C\nD | E | F") is incorrectly parsed as a table. This regresses email
    # rendering and breaks the documented "pipes in text are not tables"
    # behavior (see airut/markdown.py and tests/test_markdown.py). Remove the
    # upper bound once upstream restores delimiter validation.
    "mistune>=3.2,<3.3",
    "msal>=1.31",
    "packaging>=21.0",
    "pyyaml>=6.0.3",
    "slack-bolt>=1.20",
    "tzdata>=2024.1",
    "werkzeug>=3.1.6",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "cryptography>=46.0.6",
    "graphql-core>=3.2.8",
    "mdformat>=1.0",
    "mdformat-frontmatter>=2",
    "mdformat-gfm>=1.0",
    "mdformat-ruff>=0.1",
    "mdformat-toc>=0.5",
    "pip-licenses>=5.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "pytest-socket>=0.7.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15",
    "ty>=0.0.17",
    "uv-secure>=0.16",
]

[project.scripts]
airut = "airut.cli:cli"
airut-sandbox = "airut.sandbox_cli:main"

[project.urls]
Homepage = "https://airut.org"
Repository = "https://github.com/airutorg/airut"
Documentation = "https://github.com/airutorg/airut/tree/main/doc"

[tool.hatch.metadata.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["airut"]

[tool.ruff]
line-length = 80
target-version = "py313"
src = ["airut", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "D",      # pydocstyle
    "ANN401", # disallow typing.Any in annotations
]
ignore = [
    "D1",     # Allow missing docstrings (enforce via review)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["airut"]
force-single-line = false
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["airut", "scripts", "tests"]
exclude = ["airut/_bundled/proxy"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--disable-socket --allow-unix-socket --ignore=tests/integration"
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.pip-licenses]
# Allowed licenses for runtime dependencies (using partial matching).
# Checked via scripts/check_licenses.py which scans only runtime deps.
# See: https://spdx.org/licenses/ for license identifiers
allow-only = """
Apache;
BSD;
MIT;
MPL;
Mozilla Public License
"""
partial-match = true

[tool.uv-secure.vulnerability_criteria]
ignore_vulnerabilities = [
    # mistune — every advisory below is fixed only in 3.3.0, but mistune is
    # deliberately held at <3.3 because the 3.3.x GFM table-parser rewrite
    # dropped delimiter-row validation (still broken in 3.3.3), which would
    # regress email/Slack table rendering and break the documented "pipes in
    # prose are not tables" behavior (see the dependency pin comment above,
    # airut/markdown.py, and tests/test_markdown.py). Airut renders only
    # trusted, agent-generated markdown, loads a minimal plugin set (table /
    # table_in_quote for email; strikethrough / url / task_lists for Slack),
    # and never calls mistune's HTMLRenderer.safe_url() — EmailRenderer
    # overrides link()/image() with mistune.escape() and SlackMrkdwnRenderer
    # emits mrkdwn, not HTML. Remove this whole block once the pin is lifted
    # (upstream restores delimiter validation). (2026-07)
    #
    # GHSA-qcq2-496w-v96p (CVE-2026-49851): quadratic-time DoS in
    # parse_link_text on input with many "[" characters. Availability only;
    # airut runs inside a resource- and time-limited sandbox.
    "GHSA-qcq2-496w-v96p",
    # CPU-exhaustion (quadratic-time) DoS in active parsing paths. Availability
    # only, bounded by the sandbox's resource/time limits:
    "PYSEC-2026-2210",  # CVE-2026-59922: strikethrough/mark/insert markers
    "PYSEC-2026-2213",  # CVE-2026-59925: long emphasis (**/***) runs
    "PYSEC-2026-2216",  # CVE-2026-59928: repeated reference-link definitions
    # safe_url()/XSS URL-scheme bypasses. Not reachable: airut never calls
    # mistune's safe_url() (see renderer note above):
    "PYSEC-2026-2211",  # CVE-2026-59923: percent-encoded javascript: URIs
    "PYSEC-2026-2217",  # CVE-2026-59929: legacy/chained schemes (feed:, jar:, ...)
    # Injection in directives/plugins airut does not load:
    "PYSEC-2026-2214",  # CVE-2026-59926: admonition :class: attribute injection
    "PYSEC-2026-2218",  # CVE-2026-59930: toc heading-anchor collision
    # Include directive (not used by airut — no md.read()/Include plugin):
    "PYSEC-2026-2212",  # CVE-2026-59924: include path traversal
    "PYSEC-2026-2215",  # CVE-2026-59927: indirect include cycle → RecursionError
]
