[project]
name = "airut-screenshots"
version = "0.0.0"
description = "Screenshot generator for Airut dashboard documentation"
requires-python = ">=3.13"
dependencies = [
    "airut",
    "playwright",
]

[tool.uv.sources]
airut = { path = "..", editable = true }

[tool.uv-secure.vulnerability_criteria]
ignore_vulnerabilities = [
    "PYSEC-2025-183",  # PyJWT — disputed advisory, no fix version available (2026-05)
]
