[project]
name = "airut-proxy"
version = "0.0.0"
description = "Dependency lockfile for the Airut proxy container"
requires-python = ">=3.13"
dependencies = [
    "mitmproxy",
    "cryptography",
]

[tool.uv-secure.vulnerability_criteria]
# Flask <=3.1.2 pinned by mitmproxy 12.2.1 (GHSA-68rp-wp8r-4726: missing
# Vary: Cookie header). Low severity, not exploitable in proxy context since
# Flask's web interface is not exposed externally. Remove when mitmproxy
# releases a version that allows Flask >=3.1.3.
ignore_vulnerabilities = ["GHSA-68rp-wp8r-4726"]
