[project]
name = "airut-proxy"
version = "0.0.0"
description = "Dependency lockfile for the Airut proxy container"
requires-python = ">=3.13"
dependencies = [
    "mitmproxy",
    "cryptography",
]

[tool.uv]
# Override mitmproxy 12.2.1's transitive dependency pins to fix known
# vulnerabilities. Safe overrides: all are compatible patch/minor releases.
# Remove when mitmproxy releases a version with updated pins.
#
# - tornado >=6.5.5: fixes GHSA-78cv-mqj4-43f7 (cookie attribute injection)
# - pyopenssl >=26.0.0: fixes GHSA-vp96-hxj8-p424
# - flask >=3.1.3: fixes GHSA-68rp-wp8r-4726 (missing Vary: Cookie header)
override-dependencies = [
    "tornado>=6.5.5",
    "pyopenssl>=26.0.0",
    "flask>=3.1.3",
]
